@@ -2,13 +2,15 @@ package com.ahd.backend.carcontracts.appuser.dto;
 
 import com.ahd.backend.carcontracts.S3.S3UrlService;
 import com.ahd.backend.carcontracts.appuser.models.AppUser;
+import com.ahd.backend.carcontracts.appuser.models.Permission;
 import com.ahd.backend.carcontracts.appuser.models.Role;
 import com.ahd.backend.carcontracts.config.ApplicationContextProvider;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import lombok.Builder;
 import lombok.Data;
 
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Data
 @Builder
@@ -20,6 +22,7 @@ public class UserDetailsDTO {
     private String fullName;
     private Long companyUserId;
     private List<String> roles;
+    Set<Permission> permissions;
     
     @JsonIgnore
     private String image; // S3 key
@@ -28,26 +31,47 @@ public class UserDetailsDTO {
 
     public static UserDetailsDTO fromAppUser(AppUser user) {
         S3UrlService s3UrlService = ApplicationContextProvider.getApplicationContext().getBean(S3UrlService.class);
-        List<String> roleNames = user.getRoles().stream()
-                .map(Role::getName)
-                .toList();
+        var result = user.getRoles().stream()
+                .collect(Collectors.teeing(
+                        Collectors.mapping(Role::getName, Collectors.toList()),
+                        Collectors.flatMapping(role -> role.getPermissions().stream(), Collectors.toSet()),
+                        (roleNames, permissions) -> Map.of(
+                                "roleNames", roleNames,
+                                "permissions", permissions
+                        )
+                ));
+        @SuppressWarnings("unchecked")
+        List<String> roleNames = (List<String>) result.get("roleNames");
+        @SuppressWarnings("unchecked")
+        Set<Permission> allPermissions = (Set<Permission>) result.get("permissions");
         return UserDetailsDTO.builder()
                 .id(user.getId())
                 .username(user.getUsername())
                 .email(user.getEmail())
                 .phone(user.getPhone())
                 .fullName(user.getFullName())
-                .image(user.getImage())
                 .roles(roleNames)
+                .permissions(allPermissions)
+                .image(user.getImage())
                 .imageUrl(s3UrlService.getImageUrl(user.getImage()))
                 .build();
     }
 
     public static UserDetailsDTO fromAppUser(AppUser user,Long companyUserId) {
         S3UrlService s3UrlService = ApplicationContextProvider.getApplicationContext().getBean(S3UrlService.class);
-        List<String> roleNames = user.getRoles().stream()
-                .map(Role::getName)
-                .toList();
+        var result = user.getRoles().stream()
+                .collect(Collectors.teeing(
+                        Collectors.mapping(Role::getName, Collectors.toList()),
+                        Collectors.flatMapping(role -> role.getPermissions().stream(), Collectors.toSet()),
+                        (roleNames, permissions) -> Map.of(
+                                "roleNames", roleNames,
+                                "permissions", permissions
+                        )
+                ));
+        @SuppressWarnings("unchecked")
+        List<String> roleNames = (List<String>) result.get("roleNames");
+        @SuppressWarnings("unchecked")
+        Set<Permission> allPermissions = (Set<Permission>) result.get("permissions");
         return UserDetailsDTO.builder()
                 .id(user.getId())
                 .username(user.getUsername())
@@ -58,6 +82,7 @@ public class UserDetailsDTO {
                 .imageUrl(s3UrlService.getImageUrl(user.getImage()))
                 .companyUserId(companyUserId)
                 .roles(roleNames)
+                .permissions(allPermissions)
                 .build();
     }
 } 
